@@ -722,18 +722,19 @@ int TRI_UNLINK(char const* filename);
 void TRI_GET_ARGV_WIN(int& argc, char** argv);
 
 // system error string macro requires ERRORBUF to instantiate its buffer before.
-#define TRI_SYSTEM_ERROR()                                                       \
-  do {                                                                           \
-    auto result = translateWindowsError(::GetLastError());                       \
-    errno = result.errorNumber();                                                \
-    auto const& mesg = result.errorMessage();                                    \
-    if (mesg.empty()) {                                                          \
-      memcpy(&windowsErrorBuf[0], "unknown error\0", strlen("unknown error\0")); \
-    } else {                                                                     \
-      memcpy(&windowsErrorBuf[0], mesg.data(),                                   \
-             (std::min)(sizeof(windowsErrorBuf) / sizeof(windowsErrorBuf[0]),    \
-                        mesg.size()));                                           \
-    }                                                                            \
+#define TRI_SYSTEM_ERROR()                                                    \
+  do {                                                                        \
+    auto result = translateWindowsError(::GetLastError());                    \
+    errno = result.errorNumber();                                             \
+    auto const& mesg = result.errorMessage();                                 \
+    memset(windowsErrorBuf, 0, sizeof(windowsErrorBuf));                      \
+    if (mesg.empty()) {                                                       \
+      memcpy(&windowsErrorBuf[0], "unknown error", strlen("unknown error"));  \
+    } else {                                                                  \
+      memcpy(&windowsErrorBuf[0], mesg.data(),                                \
+             (std::min)(sizeof(windowsErrorBuf) / sizeof(windowsErrorBuf[0]), \
+                        mesg.size()));                                        \
+    }                                                                         \
   } while (false)
 
 #define STDERR_FILENO 2
