@@ -1,6 +1,8 @@
 v3.7.6 (XXXX-XX-XX)
 -------------------
 
+* Fix Windows directory creation error handling.
+
 * Added new metrics for tracking AQL queries and slow queries:
   * `arangodb_aql_query_time`: histogram with AQL query times distribution.
   * `arangodb_aql_slow_query_time`: histogram with AQL slow query times
